# ADK

./: README.md  pyproject.toml
tam_advance/: .env  agent.py  agentspace_method.md  agentspace_method_2.md  c_test.py  communication_tools.py  crm_tools.py  gcp_tools.py  knowledge_tools.py  main.py  readme.md  requirements.txt  tam_agents.md
tam_assistant/: .env  .gitignore  agent.py  google_workspace.py  other_approach.md
user_story_agent/: .env  agent.py
